@@ -2,10 +2,11 @@
 <script src="http://connect.facebook.net/en_US/all.js"></script>
 <script>
   FB.init({appId: '{{facebook_app.application_id}}', status: true, cookie: true, xfbml: true});
-  function FB_login() {
+  function FB_login(nextUrl) {
     FB.login(function(response) {
       if (response.session) {
         document.getElementById("_fb_access_token").value = response.session.access_token;
+        document.getElementById("_fb_next_url").value = nextUrl || '';
         document.getElementById("_fb_login").submit();
       } else {
         var next;
@@ -22,5 +23,6 @@
 
 <form id="_fb_login" method="post" action="{% url facebook_login %}">
 {% csrf_token %}
+<input type="hidden" name="next" value="" id="_fb_next_url"/>
 <input type="hidden" name="access_token" id="_fb_access_token"/>
 </form>
