@@ -6,15 +6,35 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
+
 {% block body %}
     
-    <h1>{% trans "Sign In" %}</h1>
+{% url account_signup as signup_url %}
 
-    {% if not user.is_authenticated %}
-        {% url account_signup as signup_url %}
-        {% url socialaccount_login as social_login_url %}
-        <p>{% blocktrans %}No account? <a href="{{ signup_url }}">Sign up</a> for an new account, or sign in using an existing <a href="{{social_login_url }}">3rd party account</a>.{% endblocktrans %}</p>
-    {% endif %}
+<h1>{% trans "Sign In" %}</h1>
+
+{% if not user.is_authenticated %}
+
+{% if allauth.socialaccount_enabled  %}
+<p>{% blocktrans with site.name as site_name %}Please sign in with one
+of your existing third party accounts. Or, <a 
+href="{{ signup_url }}">sign up</a> for a {{site_name}} account and sign in
+below:{% endblocktrans %}</p>
+
+<div class="socialaccount_ballot">
+
+<ul class="socialaccount_providers">
+{% include "socialaccount/snippets/provider_list.html" %}
+</ul>
+
+<div class="login-or">or</div>
+
+</div>
+
+{% include "socialaccount/snippets/login_extra.html" %}
+
+{% endif %}
+{% endif %}
 
     <form class="login uniForm" method="POST" action="{% url account_login %}">
         {% csrf_token %}
@@ -31,9 +51,9 @@
         </fieldset>
     </form>
     
-    {% if user.is_authenticated %}
-    {% include "account/snippets/already_logged_in.html" %}
-    {% endif %}
+{% if user.is_authenticated %}
+{% include "account/snippets/already_logged_in.html" %}
+{% endif %}
     
 
 {% endblock %}
