@@ -1,38 +1,0 @@
-{% extends "socialaccount/base.html" %}
-
-{% load i18n %}
-{% load uni_form_tags %}
-{% load account_tags %}
-
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
-
-{% block body %}
-    
-    {% if openid and not user.is_authenticated %}
-        <p><span class="warning">It appears you have started to login using OpenID. Want to <a href="/openid/register/">finish logging in</a>?</span></p>
-    {% endif %}
-    
-    <h1>{% trans "Sign In" %}</h1>
-
-
-<p>Sign in using your account with:</p>
-
-<ul class="socialaccount_providers">
-<li><a class="socialaccount_provider local" title="{{site}}" href="{% url account_login %}">{{site.name}}</a></li>
-{% include "socialaccount/snippets/provider_list.html" %}
-</ul>
-
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% if user.is_authenticated %}
-        {% user_display user as user_display %}
-        <p><strong>{% trans "Note" %}:</strong> {% blocktrans %}you are already signed in as {{ user_display }}.{% endblocktrans %}</p>
-{% else  %}
-        {% url account_signup as signup_url %}
-        <p>{% blocktrans %}Otherwise, <a href="{{ signup_url }}">sign up</a> for a new account.{% endblocktrans %}</p>
-{% endif %}
-    
-    
-
-{% endblock %}
-
